--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     plan: free
     buildCommand: |
       pip install -r requirements.txt
-      cd frontend && npm install --legacy-peer-deps && npm run build && cd ..
+      cd frontend && npm install --legacy-peer-deps --no-fund --no-audit && npm run build && cd ..
     startCommand: uvicorn fastapi_app:app --host 0.0.0.0 --port $PORT
     envVars:
       - key: OPENAI_API_KEY
